--- a/About.css
+++ b/About.css
@@ -70,19 +70,14 @@ p {
 
 
 .header {
-    width: 100%;
-    right: 2px;
-    background-color: #000000;
-    font-size: 25px; 
-    font-family: Modern Sans; 
-    line-height: normal;
-    position: fixed;
-    z-index: 1000; /* Ensure it stays above other content */
-    display: flex;
-    justify-content: space-between;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* Optional: add a shadow for better visibility */
-  }
-  
+  width: 100%;
+  right: 2px;
+  text-align: center;
+  background-color: #000000;
+  font-size: 25px; 
+  font-family: Modern Sans; 
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* Optional: add a shadow for better visibility */
+}
   .Image1{
     filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
   }
@@ -90,7 +85,7 @@ p {
   
     width: 369px; 
     height: 170.14px; 
-    right: -1300px; 
+    left: -850px; 
     top: -73px; 
     position: absolute;
   }
@@ -101,6 +96,7 @@ p {
   color: #fff;
   width: 100%; 
   height: 0; 
+  top: 78px;
   left: 0; 
   position: absolute; 
   border: 2px #ffffff solid;
