--- a/Contact.css
+++ b/Contact.css
@@ -23,7 +23,7 @@ body {
 
 
   .CTA {
-    width: 500px;
+    width: 30%;;
     font-size: 25px; 
     font-family: Modern Sans; 
     font-weight: 500;     
