--- a/Contact.css
+++ b/Contact.css
@@ -178,3 +178,28 @@ body {
   border: 2px #ffffff solid;
   }
 
+
+  @media (max-width: 767px) {
+    .CTA {
+        width: 100%;
+        font-size: 20px; /* Adjust font size for readability */
+        margin-top: 700px; /* Adjust for better spacing */
+        padding: 20px;
+        right: 0;
+        text-align: center; /* Center text on smaller screens */
+    }
+
+
+    .Image1, .Image7 {
+      width: 85%;
+      height: auto; /* Maintain aspect ratio */
+      left: 10%; /* Center image */
+      top: -30px;
+      text-align: center;
+  }
+
+  .Vector2, .Vector3 {
+      display: none; /* Hide vectors on small screens */
+  }
+
+}
